bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: sales-savvy
    labels:
        com.docker.compose.project: sales-savvy
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: sales-savvy
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: sales-savvy
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: savvy-frontend
                  image: sales-savvy-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-3005
                      containerPort: 3005
