bridge/base/razorpay-app-deployment.yaml
#! razorpay-app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: razorpay-app
    namespace: sales-savvy
    labels:
        com.docker.compose.project: sales-savvy
        com.docker.compose.service: razorpay-app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: sales-savvy
            com.docker.compose.service: razorpay-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: sales-savvy
                com.docker.compose.service: razorpay-app
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: razorpay-backend
                  image: sales-savvy-razorpay-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: razorpay-a-8081
                      containerPort: 8081
