bridge/base/frontend-service.yaml
#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: sales-savvy
    labels:
        com.docker.compose.project: sales-savvy
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: sales-savvy
        com.docker.compose.service: frontend
    ports:
        - name: frontend-3005
          port: 3005
          protocol: TCP
          targetPort: frontend-3005

# check if there is at least one published port
